@startuml
class logic.unit.FlyingUnit {
+ boolean move(int)
}

class logic.unit.BaseUnit {
- int row
~ int power
- boolean isWhite
~ boolean isFlying
- String name
+ boolean move(int)
+ void attack(ArrayList<BaseUnit>)
+ int getRow()
+ void setRow(int)
+ int getColumn()
+ void setColumn(int)
+ int getHp()
+ void setHp(int)
+ int getPower()
+ boolean isWhite()
+ void setWhite(boolean)
+ boolean isFlying()
+ String getName()
+ void setName(String)
}


class logic.unit.RangeUnit {
+ void attack(ArrayList<BaseUnit>)
}

class logic.game.GameSystem {
- ArrayList<BaseUnit> allWhitePieces
- ArrayList<BaseUnit> allRedPieces
- boolean gameEnd
- {static} GameSystem instance
+ {static} GameSystem getInstance()
+ boolean isGameEnd()
+ void setGameEnd(boolean)
+ ArrayList<BaseUnit> getAllWhitePieces()
+ ArrayList<BaseUnit> getAllRedPieces()
+ void printBoardStatus(ArrayList<BaseUnit>)
+ void removeDeadPieces(ArrayList<BaseUnit>)
+ BaseUnit promote(BaseUnit,int)
}


class logic.unit.MeleeUnit {
}


logic.unit.BaseUnit <|-- logic.unit.FlyingUnit
logic.unit.BaseUnit <|-- logic.unit.RangeUnit
logic.unit.BaseUnit <|-- logic.unit.MeleeUnit
@enduml